Fixing issue 8, making import order consistent.
